🐛Bug Fix: Centrally align and justify the profle title

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -7,6 +7,9 @@
         font-size: 50px;
         font-weight: 700;
         color: white;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: calc((320px - 50px)/2);
     }
     
     img {
